Fix header spacing on mobile

--- a/less/default.less
+++ b/less/default.less
@@ -163,11 +163,15 @@ header {
 
         justify-content: space-between;
 
-        margin-top: -@base-font-size / 2;
-
         @font-size: @base-font-size * 0.8;
+
         @media @not-mobile {
+            margin-top: -@base-font-size / 2;
             padding: 0 @font-size * 1.5;
+        }
+
+        @media @mobile {
+            margin-top: @base-font-size / 2;
         }
 
         p {
@@ -180,14 +184,26 @@ header {
             font-weight: 400;
             flex-grow: 1;
 
-            &:nth-child(1),
-            &:nth-child(2) {
-                text-align: left;
+            @media @not-mobile {
+                &:nth-child(1),
+                &:nth-child(2) {
+                    text-align: left;
+                }
+
+                &:nth-child(4),
+                &:nth-child(5) {
+                    text-align: right;
+                }
             }
 
-            &:nth-child(4),
-            &:nth-child(5) {
-                text-align: right;
+            @media @mobile {
+                text-align: center;
+
+                border-right: #CCC 1px solid;
+
+                &:last-child {
+                    border-right: none;
+                }
             }
 
             a {
